--- a/grid.html
+++ b/grid.html
@@ -12,7 +12,8 @@
             grid-gap: 20px;
         }
         .box{
-            border: 3px solid greenyellow;
+            border: 3px solid lightcoral;
+            background-color: lightblue ;
     
         }
     </style>
@@ -31,6 +32,9 @@
         <div class="box">10</div>
         <div class="box">11</div>
         <div class="box">12</div>
+        <div class="box">13</div>
+        <div class="box">14</div>
+        
     </div>
 </body>
 </html>
